--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
     "vue-loader": "^11.1.4",
+    "vue-resource": "^1.2.1",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
